Fixed hamburgermenu click issues | Removed transitions on mobile devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,7 @@
   }
 
   .observerTransition {
-    @apply transition duration-300 ease-in
+    @apply md:transition md:duration-300 md:ease-in
   }
 }
 
